# sew_event_tool_trieb

./: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
app/: backend_pre_start.py
app/api/: deps.py
app/api/routes/: login.py
app/dashboard/: page.tsx
backend/: .env.backend  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/app/: initial_data.py  main.py  tests_pre_start.py  uml.md
backend/app/api/: main.py
backend/app/api/routes/: cmd.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: user.py
backend/app/database/: session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/scripts/: alembic_runner.sh  lint.sh  test.db  test.sh
backend/tests/: conftest.py
code-server/: .markdown-preview-enhanced.json  Dockerfile  entrypoint.sh  install-extensions.sh  pyproject.toml
frontend/: Dockerfile  next.config.ts
frontend/app/login/: page.tsx
scripts/: format.sh
tests/api/routes/: test_users.py
traefik/: dynamic.yml  traefik.yml
